0.11.8
K3b now searches for the Debian cdrecord wrapper script and properly selects the cdrecord version to use
	(cdrecord.mmap or cdrecord.shm) based on the kernel version. This should fix all problems with
	K3bSetup on Debian.
Fixed writing speed parsing with patched cdrecord
	
0.11.7
Check size of returned CD-TEXT data to be a multiple of the pack length. This should fix problems
	with CD copy.
Audio Project: Do not overwrite CD-Text values loaded from the project file with the ones detected.
Added --copydvd command line parameter
Do only read MCN and ISRCs when copying an audio cd since scanning them takes a very long time.
Fixed cdrdao 1.1.8 version handling (no ATAPI warning)
Fixed crash when using the Audiometadatarenamer on Movix Projects
Automatically enable UDF extensions in case the project contains files bigger then 2 gb.
	
0.11.6
Fixed length calculation for long FLAC files.
Allow Audio CDs that violate the Red Book standard (Tracks shorter than 4 seconds)
Some improvements in disk-info retrieval

0.11.5
Do not ask for overwriting directories in cloning dialog
Again fixed some disk detection problems which were introduced with the previous fixes :-(
Fixed a crash which occured if the last boot image was displayed in the fileview while removing it.
Support for ID3 Tags in FLAC files.
Support for cdrdao 1.1.8.
	
0.11.4
Fixed adding of hidden files (wrong naming of config entries)
Use a default imagefile name for cloning if none was specified.
Use the Joliet names if no Rockridge is available in session import
	
0.11.3
fixed features detection with some devices.
fixed multisession writing on some systems (K3b used to open the device instead of leaving it to mkisofs to
	prevent permission problems. Sadly this does not work with all systems since it seems that K3b does
	not close the device early enough so cdrecord cannot open it.)

0.11.2
K3bProcess now has a clean API and a non-stupid implementation which fixes the kde 3.2 issue