@@ -3,6 +3,8 @@ K3b now searches for the Debian cdrecord wrapper script and properly selects the
 	(cdrecord.mmap or cdrecord.shm) based on the kernel version. This should fix all problems with
 	K3bSetup on Debian.
 Fixed writing speed parsing with patched cdrecord
+Add leading zero to tracknumber meta data field when encoding audio tracks.
+Fixed data project size calculation if files from different devices have the same inode number.
 	
 0.11.7
 Check size of returned CD-TEXT data to be a multiple of the pack length. This should fix problems
